Update API and example to support cherrypy 3.
git-svn-id: svn://svn.freevo.org/kaa/trunk@3281 a8f5125c-1e01-0410-8897-facf34644b8e

--- a/cherrypy/test/cheetah.html
+++ b/cherrypy/test/cheetah.html
@@ -1,10 +1,14 @@
-<html><head><title>My first Tempatel</title>
+<html>
+<head>
+    <title>My first Tempatel</title>
+</head>
+
 <body>
 <ul>
-#for $line in $lines
-<li>$line</li>
-#end for
-<img src="images/foo.jpg"/>
+    #for $line in $lines
+        <li>$line</li>
+    #end for
 </ul>
+<img src="/images/freevo.png"/>
 </body>
 </html>
